--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="appName">Web Browser</string>
-    <string name="appDescription">app.webbrowser.com</string>
+    <string name="appName">Develouz Template</string>
+    <string name="appDescription">com.develouz.temp</string>
 
     <string name="splashPolicy">Dengan menggunakan aplikasi ini anda setuju dengan [EULA] dan [PRIVACY] kami.</string>
     <string name="splashEula">Persetujuan Pengguna</string>
